--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						<ul>
 							<li class="active"><a href="index.html">Головна</a></li>
 							<li class="has-dropdown">
-							<a href="#categories">Категорії</a>
+							<a href="#about">Категорії</a>
 								<ul class="dropdown">
 									<li><a href="#categories">Team Design</a></li>
 									<li><a href="#categories">Case Study</a></li>
@@ -155,10 +155,10 @@
 		</div>
 		<!-- END .gtco-client -->
 
-		<div id = "categories" class="gtco-services gtco-section">
+		<div id = "about" class="gtco-services gtco-section">
 			<div class="gtco-container">
 				<div class="row row-pb-sm">
-					<div class="col-md-8 col-md-offset-2 gtco-heading text-center">
+					<div id ="categories" class="col-md-8 col-md-offset-2 gtco-heading text-center">
 						<h2>European BEST Engineering Competition (EBEC)</h2>
 						<p><b>EBEC</b> – це змагання між студентами технічних університетів Європи, започаткувала їх організація BEST (Board of European Students of Technology)ˆ в 2002 році.  Ціль змагань – відкрити потенціал інженера в кожному, дати можливість студентам проявити свою креативність та нестандартне мислення.</p>
     <p> <b>Візія</b> – просування інженерної думки в Україні шляхом створення сприятливих умов для її виникнення і розвитку.</p>
@@ -167,7 +167,7 @@
 					</div>
 				</div>
 				<div class="row row-pb-md">
-					<div class="col-md-4 col-sm-4 service-wrap">
+					<div id="teamdesign" class="col-md-4 col-sm-4 service-wrap">
 						<div class="service">
 							<h3><i class="ti-ruler-pencil"></i>Team Design</h3>
 							<p><b>Team Design</b>– вирішення певного технічного завдання командою протягом обмеженого проміжку часу. Результатом проведення конкурсу є наявність пристрою, що виконує необхідні функції для розв’язання поставленої задачі. Завдання для даної категорії може охопити різноманітні області інженерних дисциплін: електротехніку, електроніку, механіку, гідравліку, радіотехніку тощо. Зазвичай процес розв’язання та представлення результатів є достатньо динамічним та видовищним, для його висвітлення запрошуються представники ЗМІ.</p>
@@ -179,7 +179,7 @@
 							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima quidem quae, assumenda dolores ad pariatur! Deleniti debitis, voluptatem! Omnis enim magnam perspiciatis, natus. Ipsum distinctio, voluptatibus vero laboriosam sequi! Officia fuga quam eveniet quo similique!</p>
 						</div>
 					</div>-->
-					<div class="col-md-4 col-sm-4 service-wrap">
+					<div id="casestudy" class="col-md-4 col-sm-4 service-wrap">
 						<div class="service">
 							<h3><i class="ti-pie-chart"></i>Case Study</h3>
 							<p><b>Case Study</b> – вирішення аналітичних завдань, детальне дослідження певного об’єкта, проблеми, процесу, що має чіткі часові та просторові межі. Зазвичай вирішуються питання управлінської діяльності або технічної сфери. Надаються всі дані, необхідні для розв’язання поставленої задачі, завдання може носити специфічний характер, що стосується проблем та розробок компанії. Результати досліджень команди представляють шляхом проведення презентації.</p>
@@ -193,17 +193,17 @@
 		</div>
 		<!-- END .gtco-services -->
 
-		<div class="gtco-section gtco-products">
+		<div id="contacts" class="gtco-section gtco-products">
 			<div class="gtco-container">
 				<div class="row row-pb-sm">
 					<div class="col-md-8 col-md-offset-2 gtco-heading text-center">
-						<h2>Popular Products</h2>
+						<h2>Контакти</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus placerat enim et urna sagittis, rhoncus euismod erat tincidunt. Donec tincidunt volutpat erat.</p>
 					</div>
 				</div>
 				<div class="row row-pb-md">
-					<div class="col-md-4 col-sm-4">
-						<a href="#" class="gtco-item two-row bg-img animate-box" style="background-image: url(images/img_1.jpg)">
+					<!--<div class="col-md-4 col-sm-4">
+						<a href="#" class="gtco-item two-row bg-img animate-box" style="background-image: url(images/photos/markiv.jpg)">
 							<div class="overlay">
 								<i class="ti-arrow-top-right"></i>
 								<div class="copy">
@@ -213,7 +213,7 @@
 							</div>
 							<img src="images/img_1.jpg" class="hidden" alt="Free HTML5 Website Template by FreeHTML5.co">
 						</a>
-						<a href="#" class="gtco-item two-row bg-img animate-box" style="background-image: url(images/img_2.jpg)">
+						<a href="#" class="gtco-item two-row bg-img animate-box" style="background-image: url(images/photos/fenii.jpg)">
 							<div class="overlay">
 								<i class="ti-arrow-top-right"></i>
 								<div class="copy">
@@ -223,9 +223,10 @@
 							</div>
 							<img src="images/img_2.jpg" class="hidden" alt="Free HTML5 Website Template by FreeHTML5.co">
 						</a>
-					</div>
+					</div>-->
+					<center>
 					<div class="col-md-4 col-sm-4">
-						<a href="#" class="gtco-item one-row bg-img animate-box" style="background-image: url(images/img_md_1.jpg)">
+						<a href="#" class="gtco-item one-row bg-img animate-box" style="background-image: url(images/photos/fenii.jpg)">
 							<div class="overlay">
 								<i class="ti-arrow-top-right"></i>
 								<div class="copy">
@@ -237,6 +238,19 @@
 						</a>
 					</div>
 					<div class="col-md-4 col-sm-4">
+						<a href="#" class="gtco-item one-row bg-img animate-box" style="background-image: url(images/photos/markiv.jpg)">
+							<div class="overlay">
+								<i class="ti-arrow-top-right"></i>
+								<div class="copy">
+									<h3>Paper Pouch</h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+								</div>
+							</div>
+							<img src="images/img_md_1.jpg" class="hidden" alt="Free HTML5 Website Template by FreeHTML5.co">
+						</a>
+					</div>
+					</center>
+					<!--<div class="col-md-4 col-sm-4">
 						<a href="#" class="gtco-item two-row bg-img animate-box" style="background-image: url(images/img_3.jpg)">
 							<div class="overlay">
 								<i class="ti-arrow-top-right"></i>
@@ -257,7 +271,7 @@
 							</div>
 							<img src="images/img_4.jpg" class="hidden" alt="Free HTML5 Website Template by FreeHTML5.co">
 						</a>
-					</div>
+					</div>-->
 				</div>
 				<div class="row">
 					<div class="col-md-12 text-center">
