--- a/index.html
+++ b/index.html
@@ -132,28 +132,7 @@
 		-->
 		<!-- END #gtco-header -->
 
-		<div class="gtco-client">
-			<div class="gtco-container">
-				<div class="row">
-					<div class="col-md-2 col-md-offset-1 text-center client col-sm-6 col-xs-6 col-xs-offset-0 col-sm-offset-0">
-						<img src="images/partners/client_1.png" alt="Free Website Template by FreeHTML5.co" class="img-responsive">
-					</div>
-					<div class="col-md-2 text-center client col-sm-6 col-xs-6 col-xs-offset-0 col-sm-offset-0">
-						<img src="images/partners/client_2.png" alt="Free Website Template by FreeHTML5.co" class="img-responsive">
-					</div>
-					<div class="col-md-2 text-center client col-sm-6 col-xs-6 col-xs-offset-0 col-sm-offset-0">
-						<img src="images/partners/client_3.png" alt="Free Website Template by FreeHTML5.co" class="img-responsive">
-					</div>
-					<div class="col-md-2 text-center client col-sm-6 col-xs-6 col-xs-offset-0 col-sm-offset-0">
-						<img src="images/partners/client_4.png" alt="Free Website Template by FreeHTML5.co" class="img-responsive">
-					</div>
-					<div class="col-md-2 text-center client col-sm-6 col-xs-6 col-xs-offset-0 col-sm-offset-0">
-						<img src="images/partners/client_5.png" alt="Free Website Template by FreeHTML5.co" class="img-responsive">
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- END .gtco-client -->
+		
 
 		<div id = "about" class="gtco-services gtco-section">
 			<div class="gtco-container">
@@ -275,14 +254,37 @@
 				</div>
 				<div class="row">
 					<div class="col-md-12 text-center">
-					<p><a href="http://freehtml5.co" target="_blank" class="btn btn-special">Visit Gettemplates.co</a></p>
+					<p><a href="mailto:Nazar.Fenii@gmail.com" target="_blank" class="btn btn-special">Стати партнером</a></p>
 					</div>
 				</div>
 			</div>
 		</div>
 		<!-- END .gtco-products -->
 
-		<div class="gtco-section gtco-testimonial gtco-gray">
+		<div class="gtco-client">
+			<div class="gtco-container">
+				<div class="row">
+					<div class="col-md-2 col-md-offset-1 text-center client col-sm-6 col-xs-6 col-xs-offset-0 col-sm-offset-0">
+						<img src="images/partners/client_1.png" alt="Free Website Template by FreeHTML5.co" class="img-responsive">
+					</div>
+					<div class="col-md-2 text-center client col-sm-6 col-xs-6 col-xs-offset-0 col-sm-offset-0">
+						<img src="images/partners/client_2.png" alt="Free Website Template by FreeHTML5.co" class="img-responsive">
+					</div>
+					<div class="col-md-2 text-center client col-sm-6 col-xs-6 col-xs-offset-0 col-sm-offset-0">
+						<img src="images/partners/client_3.png" alt="Free Website Template by FreeHTML5.co" class="img-responsive">
+					</div>
+					<div class="col-md-2 text-center client col-sm-6 col-xs-6 col-xs-offset-0 col-sm-offset-0">
+						<img src="images/partners/client_4.png" alt="Free Website Template by FreeHTML5.co" class="img-responsive">
+					</div>
+					<div class="col-md-2 text-center client col-sm-6 col-xs-6 col-xs-offset-0 col-sm-offset-0">
+						<img src="images/partners/client_5.png" alt="Free Website Template by FreeHTML5.co" class="img-responsive">
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- END .gtco-client -->
+		
+		<!--<div class="gtco-section gtco-testimonial gtco-gray">
 			<div class="gtco-container">
 
 				<div class="row row-pb-sm">
@@ -333,11 +335,11 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div>-->
 		
 
 		<footer id="gtco-footer" class="gtco-section" role="contentinfo">
-			<div class="gtco-container">
+			<!--<div class="gtco-container">
 				<div class="row row-pb-md">
 					<div class="col-md-8 col-md-offset-2 gtco-cta text-center">
 						<h3>We Love To Talk About Your Business</h3>
@@ -362,7 +364,7 @@
 							</div>
 							<div class="col-md-6">
 								<p>
-									<a href="tel://1234567890">+1 234 4565 2342</a> <br>
+									<a href="tel://1234567890">+</a> <br>
 									<a href="#">info@domain.com</a>
 								</p>
 							</div>
@@ -378,15 +380,15 @@
 						</form>
 					</div>
 				</div>
-			</div>
+			</div>-->
 			<div class="gtco-copyright">
 				<div class="gtco-container">
 					<div class="row">
 						<div class="col-md-6 text-left">
-							<p><small>&copy; 2016 Free HTML5. All Rights Reserved. </small></p>
+							<p><small>&copy; 2017 BEST Lviv. All Rights Reserved. </small></p>
 						</div>
 						<div class="col-md-6 text-right">
-							<p><small>Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://pixeden.com/" target="_blank">Pixeden</a> &amp; <a href="http://unsplash.com" target="_blank">Unsplash</a></small> </p>
+							<p><small>Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> </small> </p>
 						</div>
 					</div>
 				</div>
