Норм лінк на контакти

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 								</ul>
 							</li>
 							<li>
-								<a href="services.html">Контакти</a>
+								<a href="#contacts">Контакти</a>
 							</li>
 							<li>
 								<a href="#">Про BEST</a>
@@ -180,7 +180,7 @@
 		<div id="contacts" class="gtco-section gtco-products">
 			<div class="gtco-container">
 				<div class="row row-pb-sm">
-					<div class="col-md-8 col-md-offset-2 gtco-heading text-center">
+					<div id="contacts" class="col-md-8 col-md-offset-2 gtco-heading text-center">
 						<h2>Контакти</h2>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus placerat enim et urna sagittis, rhoncus euismod erat tincidunt. Donec tincidunt volutpat erat.</p>
 					</div>
