--- a/index.html
+++ b/index.html
@@ -210,24 +210,26 @@
 					</div>-->
 					<center>
 					<div class="col-md-4 col-sm-4 col-md-offset-2">
-						<a href="#" class="gtco-item one-row bg-img animate-box" style="background-image: url(images/photos/fenii.jpg)">
+						<a href="mailto:Nazar.Fenii@gmail.com" class="gtco-item one-row bg-img animate-box" style="background-image: url(images/photos/fenii.jpg)">
 							<div class="overlay">
 								<i class="ti-arrow-top-right"></i>
 								<div class="copy">
-									<h3>Paper Pouch</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+									<h3>Назар Феній - головний організатор</h3>
+									<p><b>e-mail:</b> Nazar.Fenii@gmail.com</p>
+									<p><b>Телефон:</b> +380958167637</p>
 								</div>
 							</div>
 							<img src="images/img_md_1.jpg" class="hidden" alt="Free HTML5 Website Template by FreeHTML5.co">
 						</a>
 					</div>
-					<div class="col-md-4 col-sm-4">
-						<a href="#" class="gtco-item one-row bg-img animate-box" style="background-image: url(images/photos/markiv.jpg)">
+					<div class="col-md-4 col-sm-4 col-md-offset-0">
+						<a href="mailto:Lina.Markiv@gmail.com" class="gtco-item one-row bg-img animate-box" style="background-image: url(images/photos/markiv.jpg)">
 							<div class="overlay">
 								<i class="ti-arrow-top-right"></i>
 								<div class="copy">
-									<h3>Paper Pouch</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+									<h3>Василина Марків - відповідальна за корпоративні зв'язки</h3>
+									<p><b>e-mail:</b> Lina.Markiv@gmail.com</p>
+									<p><b>Телефон:</b> +380989234505</p>
 								</div>
 							</div>
 							<img src="images/img_md_1.jpg" class="hidden" alt="Free HTML5 Website Template by FreeHTML5.co">
