--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,700" rel="stylesheet">
 	
+	<!--Icon-->
+      <link rel="shortcut icon" href="favicon.ico" type="image/png">
+	
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -63,14 +66,15 @@
 						<!--<div id="gtco-logo"><a href="index.html"><img src="images/logo.png"  height="40" alt="EBEC Challenge"></a></div>-->
 					</div>
 					<div class="col-xs-10 text-right menu-1">
+					
 						<ul>
 							<li class="active"><a href="index.html">Головна</a></li>
-							<li class="has-dropdown">
+							<li>
 							<a href="#about">Категорії</a>
-								<ul class="dropdown">
+								<!--<ul class="dropdown">
 									<li><a href="#categories">Team Design</a></li>
 									<li><a href="#categories">Case Study</a></li>
-								</ul>
+								</ul>-->
 							</li>
 							<li>
 								<a href="#contacts">Контакти</a>
@@ -79,6 +83,7 @@
 								<a href="#">Про BEST</a>
 							</li>
 						</ul>
+			
 					</div>
 				</div>
 				
@@ -88,7 +93,7 @@
 			<style> 
 				body { padding: 0; margin: 0; width: 100%; min-height: 100vh; } 
 				.background { 
-				width: 100%; height: calc(100vh + (-126px)); 
+				width: 100%; height: calc(100vh + (-51px)); 
 				background-image: url('images/background.png'); 
 				background-size: cover; 
 				background-repeat: no-repeat; 
@@ -395,9 +400,9 @@
 						<div class="col-md-6 text-left">
 							<p><small>&copy; 2017 BEST Lviv. All Rights Reserved. </small></p>
 						</div>
-						<div class="col-md-6 text-right">
+						<!--<div class="col-md-6 text-right">
 							<p><small>Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> </small> </p>
-						</div>
+						</div>-->
 					</div>
 				</div>
 			</div>
