оновив інфу контактів

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 								<i class="ti-arrow-top-right"></i>
 								<div class="copy">
 									<h3>Назар Феній - головний організатор</h3>
-									<p><b>e-mail:</b> Nazar.Fenii@gmail.com</p>
+									<p><b>e-mail:</b> 	nazarii.fenii@BEST.eu.org</p>
 									<p><b>Телефон:</b> +380958167637</p>
 								</div>
 							</div>
@@ -239,7 +239,7 @@
 								<i class="ti-arrow-top-right"></i>
 								<div class="copy">
 									<h3>Василина Марків - відповідальна за корпоративні зв'язки</h3>
-									<p><b>e-mail:</b> Lina.Markiv@gmail.com</p>
+									<p><b>e-mail:</b> 	lina.markiv@BEST.eu.org</p>
 									<p><b>Телефон:</b> +380989234505</p>
 								</div>
 							</div>
@@ -338,6 +338,9 @@
 		<div class="gtco-client">
 			<div class="gtco-container">
 				<div class="row">
+				<div id="contacts" class="col-md-8 col-md-offset-2 gtco-heading gtco-heading-partners text-center">
+						<h2>Партнери</h2>
+					</div>
 					<div class="col-md-2 col-md-offset-1 text-center client col-sm-6 col-xs-6 col-xs-offset-0 col-sm-offset-0">
 						<img src="images/partners/client_1.png" alt="Free Website Template by FreeHTML5.co" class="img-responsive">
 					</div>
