--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
 		<div class="gtco-client">
 			<div class="gtco-container">
 				<div class="row">
-				<div id="contacts" class="col-md-8 col-md-offset-2 gtco-heading gtco-heading-partners text-center">
+				<div id="contacts" class="col-md-8 col-md-offset-2 gtco-heading-partners gtco-heading text-center">
 						<h2>Партнери</h2>
 					</div>
 					<div class="col-md-2 col-md-offset-1 text-center client col-sm-6 col-xs-6 col-xs-offset-0 col-sm-offset-0">
