Partners are gray

--- a/index.html
+++ b/index.html
@@ -338,8 +338,8 @@
 		<div class="gtco-client">
 			<div class="gtco-container">
 				<div class="row">
-				<div id="contacts" class="col-md-8 col-md-offset-2 gtco-heading-partners gtco-heading text-center">
-						<h2>Партнери</h2>
+				<div id="contacts" class="col-md-8 col-md-offset-2 gtco-heading-partners text-center">
+						<b><h2>Партнери</h2><b>
 					</div>
 					<div class="col-md-2 col-md-offset-1 text-center client col-sm-6 col-xs-6 col-xs-offset-0 col-sm-offset-0">
 						<img src="images/partners/client_1.png" alt="Free Website Template by FreeHTML5.co" class="img-responsive">
