--- a/index.html
+++ b/index.html
@@ -353,6 +353,18 @@
 					<div class="col-md-2 col-md-offset-1 text-center client col-sm-6 col-xs-6 col-xs-offset-0 col-sm-offset-0">
 						<img src="images/partners/client_1.png" alt="Free Website Template by FreeHTML5.co" class="img-responsive">
 					</div>
+					<div class="col-md-2 col-md-offset-1 text-center client col-sm-6 col-xs-6 col-xs-offset-0 col-sm-offset-0">
+						<img src="images/partners/client_1.png" alt="Free Website Template by FreeHTML5.co" class="img-responsive">
+					</div>
+					<div class="col-md-2 col-md-offset-1 text-center client col-sm-6 col-xs-6 col-xs-offset-0 col-sm-offset-0">
+						<img src="images/partners/client_1.png" alt="Free Website Template by FreeHTML5.co" class="img-responsive">
+					</div>
+					<div class="col-md-2 col-md-offset-1 text-center client col-sm-6 col-xs-6 col-xs-offset-0">
+						<img src="images/partners/client_1.png" alt="Free Website Template by FreeHTML5.co" class="img-responsive">
+					</div>
+					<div class="col-md-2 col-md-offset-1 text-center client col-sm-6 col-xs-6 col-xs-offset-0 col-sm-offset-0">
+						<img src="images/partners/client_1.png" alt="Free Website Template by FreeHTML5.co" class="img-responsive">
+					</div>
 					<div class="col-md-2 text-center client col-sm-6 col-xs-6 col-xs-offset-0 col-sm-offset-0">
 						<img src="images/partners/client_2.png" alt="Free Website Template by FreeHTML5.co" class="img-responsive">
 					</div>
