--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
 				width: 100%; height: calc(100vh + (-51px)); 
 				background-image: url('images/backgroundVI.png'); 
 				background-size: cover; 
+				background-position: 50%;
 				background-repeat: no-repeat; 
 				display: flex; display: -webkit-flex; 
 				align-items: center; 
@@ -115,7 +116,7 @@
 				justify-content: center; 
 				-webkit-justify-content: center; 
 				} 
-				.background img { width: 700px; transition: 0.5s; background-color: RGBA(0, 0, 0, 0.1); border-radius: 20px; padding: 20px; } 
+				.background img { max-width: 700px; width: 90%; max-height: 90%; transition: 0.5s; background-color: RGBA(0, 0, 0, 0.1); border-radius: 20px; padding: 20px; } 
 				.background img:hover { background-color: RGBA(0, 0, 0, 0.3); transition: 0.5s; padding: 25px; }
 			</style>
 			<div class="background"> 
