#5 background position changed

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 				width: 100%; height: calc(100vh + (-51px)); 
 				background-image: url('images/backgroundVI.png'); 
 				background-size: cover; 
-				background-position: 50%;
+				background-position: 50% 0;
 				background-repeat: no-repeat; 
 				display: flex; display: -webkit-flex; 
 				align-items: center; 
