--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 			<div class="gtco-container">
 				<div class="row row-pb-sm">
 					<div id ="categories" class="col-md-12 gtco-heading service-wrap">
-						<center><h2>European BEST Engineering Competition (EBEC)</h2></center>
+						<center><h2>European BEST Engineering Competition (EBEC) Challenge</h2></center>
 						<p><b>EBEC</b> – це змагання між студентами технічних університетів Європи, започаткувала їх організація BEST (Board of European Students of Technology)ˆ в 2002 році.  Ціль змагань – відкрити потенціал інженера в кожному, дати можливість студентам проявити свою креативність та нестандартне мислення.</p>
     <p><b>Візія</b> – просування інженерної думки в Україні шляхом створення сприятливих умов для її виникнення і розвитку.</p>
      <p><b>BEST Lviv</b> організовує змагання на локальному рівні з 2009 року.</p>
