--- a/index.html
+++ b/index.html
@@ -274,15 +274,18 @@ $("body").mousemove(function(e){
 						<b><h2>Партнери</h2><b>
 					</div>
 					</div>
-					<div class="row">
-						<div class="col-md-4 text-center client col-sm-6 col-xs-6 col-xs-offset-0 col-sm-offset-0">
-							<img style="max-width: 250px;" src="images/partners/zoom_support.png" alt="Free Website Template by FreeHTML5.co" class="img-responsive">
+					<div class="row" style="height: 150px">
+						<div class="col-md-4 text-center client col-sm-6 col-xs-6 col-xs-offset-0 col-sm-offset-0" style="height: 100%">
+							<span style="display: inline-block; height: 100%; vertical-align: middle;"></span>
+							<img style="max-width: 250px; vertical-align: middle;" src="images/partners/zoom_support.png" alt="Free Website Template by FreeHTML5.co" class="img-responsive">
 						</div>
-						<div class="col-md-4 text-center client col-sm-6 col-xs-6">
-							<img style="max-width: 250px;" src="images/partners/TTN_Main.png" alt="Free Website Template by FreeHTML5.co" class="img-responsive">
+						<div class="col-md-4 text-center client col-sm-6 col-xs-6" style="height: 100%">
+							<span style="display: inline-block; height: 100%; vertical-align: middle;"></span>
+							<img style="max-width: 250px; vertical-align: middle;" src="images/partners/TTN_Main.png" alt="Free Website Template by FreeHTML5.co" class="img-responsive">
 						</div>
-						<div class="col-md-4 text-center client col-sm-6 col-xs-6">
-							<img style="max-width: 250px;" src="images/partners/Tickets_UA.png" alt="Tickets.UA" class="img-responsive center-block">
+						<div class="col-md-4 text-center client col-sm-6 col-xs-6" style="height: 100%">
+							<span style="display: inline-block; height: 100%; vertical-align: middle;"></span>
+							<img style="max-width: 250px; vertical-align: middle;" src="images/partners/Tickets_UA.png" alt="Tickets.UA" class="img-responsive center-block">
 						</div>
 					
 					<div class="row">
