--- a/index.html
+++ b/index.html
@@ -277,12 +277,12 @@ $("body").mousemove(function(e){
 			</div>
 			<div class="partners">
               <center>
-              <a href="https://yazaki-ukraine.com/" target="_blank"><img  src="images/partners/yazaki.png" alt="Tickets" class="partners_1"></a>
-              <a href="http://www.silego.com/" target="_blank"><img src="images/partners/dslogo.png" alt="Infopulse" class="partners_1"></a>
+              <a href="https://yazaki-ukraine.com/" target="_blank"><img  src="images/partners/yazaki.png" alt="Yazaki Ukraine" class="partners_1"></a>
+              <a href="http://www.silego.com/" target="_blank"><img src="images/partners/dslogo.png" alt="Dialog Semiconductor" class="partners_1"></a>
 			  </center>
 			  <center>
-              <a href="https://yazaki-ukraine.com/" target="_blank"><img  src="images/partners/diacom.png" alt="Tickets" class="partners_2"></a>
-              <a href="http://www.silego.com/" target="_blank"><img style="max-height: 170px" src="images/partners/tss-logo.png" alt="Infopulse" class="partners_2"></a>
+              <a href="http://www.diacom.com.ua" target="_blank"><img  src="images/partners/diacom.png" alt="Diacom" class="partners_2"></a>
+              <a href="https://www.facebook.com/ltsnulp/" target="_blank"><img style="max-height: 170px" src="images/partners/tss-logo.png" alt="Lviv Tech StartUp School" class="partners_2"></a>
 			  </center>
 			</div>
 			<div class="row">
@@ -290,13 +290,13 @@ $("body").mousemove(function(e){
 			</div>
 			<div class="partners">
               <center>
-              <a href="https://yazaki-ukraine.com/" target="_blank"><img  src="images/partners/zoom_support.png" alt="Tickets" class="partners_2"></a>
-              <a href="http://www.silego.com/" target="_blank"><img src="images/partners/Tickets_UA.png" alt="Infopulse" class="partners_2"></a>
-			  <a href="http://www.silego.com/" target="_blank"><img src="images/partners/TTN_Main.png" alt="Infopulse" class="partners_2"></a>
+              <a href="https://zoomsupport.com/" target="_blank"><img  src="images/partners/zoom_support.png" alt="Zoom Support" class="partners_2"></a>
+              <a href="https://tickets.ua/" target="_blank"><img src="images/partners/Tickets_UA.png" alt="Tickets.UA" class="partners_2"></a>
+			  <a href="https://ticketstravelnetwork.com/" target="_blank"><img src="images/partners/TTN_Main.png" alt="Tickets Travel Network" class="partners_2"></a>
 			  </center>
 			   <center>
-              <a href="https://yazaki-ukraine.com/" target="_blank"><img  src="images/partners/GlobalLogic.png" alt="Tickets" class="partners_2"></a>
-              <a href="http://www.silego.com/" target="_blank"><img src="images/partners/DA-logo.png" alt="Infopulse" class="partners_2"></a>
+              <a href="https://tickets.ua/" target="_blank"><img  src="images/partners/GlobalLogic.png" alt="GlobalLogic" class="partners_2"></a>
+              <a href="https://dataart.ua/" target="_blank"><img src="images/partners/DA-logo.png" alt="DataArt" class="partners_2"></a>
 			  </center>
 			</div>
 		</div>
