--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ $("body").mousemove(function(e){
 			</div>
 			<div class="partners">
               <center>
-              <a href="https://yazaki-ukraine.com/" target="_blank"><img  src="images/partners/yazaki.png" alt="Yazaki Ukraine" class="partners_1"></a>
+              <a href="https://yazaki-ukraine.com/" target="_blank"><img  src="images/partners/Yazaki.png" alt="Yazaki Ukraine" class="partners_1"></a>
               <a href="http://www.silego.com/" target="_blank"><img src="images/partners/dslogo.png" alt="Dialog Semiconductor" class="partners_1"></a>
 			  </center>
 			  <center>
