забрав реєстрацію + поміняв банер

--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
 		<header id="gtco-header" class="gtco-cover" role="banner">
 			
             
-			<div class="background"> 
-                <img src="images/backlist.png" style="height: 100%; position: absolute; z-index: 100;">
+			<div class="background"></div>
+                <!--<img src="images/backlist.png" style="height: 100%; position: absolute; z-index: 100;">
 
 				<a href="https://goo.gl/forms/EDdb7nDXZVArssRz1" style="z-index: 1900;"> 
 					<img src="images/registration.png"> 
 				</a> 
-			</div>
+			
             <script>
             $(document).ready(function() {
 var movementStrength = 15;
@@ -124,7 +124,7 @@ $("body").mousemove(function(e){
           $('.background').css("background-position", newvalueX+"px     "+newvalueY+"px");
 });
 });
-            </script>
+            </script>-->
 			</header>
 	
 
@@ -162,12 +162,12 @@ $("body").mousemove(function(e){
 					
 					<div class="clearfix visible-md-block visible-sm-block"></div>
 
-				</div>
+				<!--</div>
 				<div class="row">
 					<div class="col-md-12 text-center">
 					<p><a href="https://goo.gl/forms/EDdb7nDXZVArssRz1" target="_blank" class="btn btn-danger">Реєстрація</a></p>
 					</div>
-				</div>
+				</div>-->
 			</div>
 		</div>
 		<!-- END .gtco-services -->
@@ -277,7 +277,7 @@ $("body").mousemove(function(e){
 			</div>
 			<div class="partners">
               <center>
-              <a href="https://yazaki-ukraine.com/" target="_blank"><img  src="images/partners/Yazaki.png" alt="Yazaki Ukraine" class="partners_1"></a>
+              <a href="https://yazaki-ukraine.com/" target="_blank"><img  src="images/partners/Yazaki.png" alt="Yazaki Ukraine" class="partners_yazaki_fix"></a>
               <a href="http://www.silego.com/" target="_blank"><img src="images/partners/dslogo.png" alt="Dialog Semiconductor" class="partners_1"></a>
 			  </center>
 			  <center>
