final partners added

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ $("body").mousemove(function(e){
 								<i class="ti-arrow-top-right"></i>
 								<div class="copy">
 									<h3 style="font-family: 'RalewayBold'">Назар Феній - головний організатор</h3>
-									<p style="font-size: 17px"><b>e-mail:</b> 	nazarii.fenii@BEST.eu.org<br><b>Телефон:</b> +380958167637</p>
+									<p style="font-size: 17px"><b>e-mail:</b> 	nazarii.fenii@BEST.eu.org<br><b>Телефон:</b> +380958167673</p>
 								</div>
 							</div>
 						</a>
@@ -281,8 +281,23 @@ $("body").mousemove(function(e){
               <a href="http://www.silego.com/" target="_blank"><img src="images/partners/dslogo.png" alt="Dialog Semiconductor" class="partners_1"></a>
 			  </center>
 			  <center>
-              <a href="http://www.diacom.com.ua" target="_blank"><img  src="images/partners/diacom.png" alt="Diacom" class="partners_2"></a>
-              <a href="https://www.facebook.com/ltsnulp/" target="_blank"><img style="max-height: 170px" src="images/partners/tss-logo.png" alt="Lviv Tech StartUp School" class="partners_2"></a>
+              <a href="http://www.diacom.com.ua" target="_blank"><img  src="images/partners/diacom.png" alt="Diacom" class="partners_1"></a>
+              <a href="https://www.facebook.com/ltsnulp/" target="_blank"><img style="max-height: 170px" src="images/partners/tss-logo.png" alt="Lviv Tech StartUp School" class="partners_1"></a>
+			  <a href="http://www.nestle.ua/brands/pastry/svitoch" target="_blank"><img  src="images/partners/svitoch.png" alt="Svitoch" class="partners_1"></a>
+			  </center>
+			  <!-- не головні партнери -->
+			  <center>
+              <a href="https://aonedairy.com/" target="_blank"><img src="images/partners/rad.png" alt="Radyvyliv Moloko" class="partners_2"></a>
+			  <a href="" target="_blank"><img src="images/partners/Ligos.jpg" alt="Ligos" class="partners_2"></a>
+			  <a href="" target="_blank"><img src="images/partners/symphony.png" alt="Symphony Solutions" class="partners_2"></a>
+			  <a href="" target="_blank"><img src="images/partners/Tech.png" alt="TechMagic" class="partners_2"></a>
+			  <a href="" target="_blank"><img src="images/partners/infopulse.png" alt="Infopulse" class="partners_2"></a>
+			  <a href="" target="_blank"><img src="images/partners/sdepot.png" alt="STARTUP DEPOT" class="partners_2"></a>			  
+			  <a href="" target="_blank"><img src="images/partners/clew.png" alt="Clew" class="partners_2"></a>
+			  <a href="" target="_blank"><img src="images/partners/kordex.png" alt="AKBAR" class="partners_2"></a>
+			  <a href="" target="_blank"><img src="images/partners/dellavie.png" alt="DELLAVIE" class="partners_2"></a>
+			  <a href="" target="_blank"><img src="images/partners/multip.png" alt="Multiplex" class="partners_2"></a>
+			  
 			  </center>
 			</div>
 			<div class="row">
